--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@ffmpeg/ffmpeg": "0.12.10",
+    "@ffmpeg.wasm/core-st": "^0.12.0",
     "@ffmpeg/core": "0.12.10",
+    "@ffmpeg/ffmpeg": "0.12.10",
     "@ffmpeg/util": "0.12.1",
     "vue": "3.2.37"
   },
